--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,56 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10 snackbar</title>
+    <title>Snackbar</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <form class="form">
-      <label>
-        Delay (ms)
-        <input type="number" name="delay" required />
-      </label>
+    <header>
+      <a class="navigation-btn" href="./index.html">Back</a>
+    </header>
 
-      <fieldset class="fieldset">
-        <legend>State</legend>
-        <label>
+    <main class="snackbar">
+      <form class="form">
+        <div class="delay-input-container">
+          <label class="input-label-form" for="delay-input"> Delay (ms) </label>
           <input
-            class="input-promise"
-            type="radio"
-            name="state"
-            value="fulfilled"
+            class="delay-input-form"
+            type="number"
+            name="delay"
+            id="delay-input"
             required
           />
-          Fulfilled
-        </label>
-        <label>
-          <input
-            class="input-promise"
-            type="radio"
-            name="state"
-            value="rejected"
-            required
-          />
-          Rejected
-        </label>
-      </fieldset>
+        </div>
 
-      <button
-        class="form-button"
-        style="width: 360px"
-        type="submit"
-        id="submit-button"
-      >
-        Create notification
-      </button>
-    </form>
-    <script src="./js/2-snackbar.js" type="module"></script>
+        <fieldset>
+          <legend>State</legend>
+          <div class="radio-input-container">
+            <div class="radio">
+              <input
+                class="radio-input-form"
+                type="radio"
+                name="state"
+                value="fulfilled"
+                id="radio-1"
+                required
+              />
+              <label class="radio-label-form" for="radio-1"> Fulfilled </label>
+            </div>
+            <div class="radio">
+              <input
+                class="radio-input-form"
+                type="radio"
+                name="state"
+                value="rejected"
+                id="radio-2"
+                required
+              />
+              <label class="radio-label-form" for="radio-2"> Recected </label>
+            </div>
+          </div>
+        </fieldset>
+
+        <button class="btn-form" type="submit">Create notification</button>
+      </form>
+    </main>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
