--- a/src/index.html
+++ b/src/index.html
@@ -2,24 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>goit-js-hw-10</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
+    <header>
+      <h1>Select</h1>
+    </header>
     <ul>
-      <li>
-        <a href="./1-timer.html">Timer</a><br />
-        <a href="./2-snackbar.html">Snackbar</a><br />
-      </li>
+      <li><a class="navigation-btn" href="./1-timer.html">Timer</a></li>
+      <li><a class="navigation-btn" href="./2-snackbar.html">Snackbar</a></li>
     </ul>
   </body>
 </html>
