--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <h1>Select</h1>
+      <h1>SELECT</h1>
     </header>
     <ul>
       <li><a class="navigation-btn" href="./1-timer.html">Timer</a></li>
